# cpp-viewshed-library

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  BS__thread__pool_8hpp.html  BS__thread__pool_8hpp__dep__incl.dot  BS__thread__pool_8hpp__incl.dot  BS__thread__pool_8hpp_source.html  BS__thread__pool__utils_8hpp.html  BS__thread__pool__utils_8hpp__incl.dot  BS__thread__pool__utils_8hpp_source.html  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO  abstractlos_8h_source.html  abstractviewshed_8h_source.html  abstractviewshedalgorithm_8h_source.html  annotated.html  cellevent_8h_source.html  celleventposition_8h_source.html  clang-format.txt  classAbstractLoS-members.html  classAbstractLoS.html  classAbstractLoS__coll__graph.dot  classAbstractLoS__inherit__graph.dot  classAbstractViewshed-members.html  classAbstractViewshed.html  classAbstractViewshedAlgorithm-members.html  classAbstractViewshedAlgorithm.html  classAbstractViewshedAlgorithm__inherit__graph.dot  classAbstractViewshed__coll__graph.dot  classAbstractViewshed__inherit__graph.dot  classAngleDifferenceToGlobalHorizon-members.html  classAngleDifferenceToGlobalHorizon.html  classAngleDifferenceToGlobalHorizon__inherit__graph.dot  classAngleDifferenceToLocalHorizon-members.html  classAngleDifferenceToLocalHorizon.html  classAngleDifferenceToLocalHorizon__coll__graph.dot  (+340 more)
.github/workflows/: build_windows.yml  conda.yaml  conda_build.yaml  create_deb_file.yaml  create_library_release.yaml  create_release.yaml  create_releases.yaml  download.yaml  publish_docs.yaml  push_to_linux_build.yaml  release_docker.yaml  release_ppa.yaml  release_python_docker.yaml  relese_docker.yaml  test_library.yaml  test_plugin.yaml  test_wf.yaml
cmake/: CondaInstall.cmake  Config.cmake.in  FindPQXX.cmake  FindSimpleRasters.cmake  LibFindMacros.cmake  Packing.cmake  ViewshedConfig.cmake.in
conda/: bld.bat  build.sh  meta.yaml  test_script.bat  test_script.sh
conda/variants/: macOS.yaml  macos.yaml  unix.yaml  windows.yaml
debian/: changelog  control  copyright  rules  viewshed-bin.install  viewshed.install
docker/: Dockerfile  build.sh  viewshed_install_from_ppa.dockerfile
docs/: CMakeLists.txt  Doxyfile.in
include/viewshead/: abstractlos.h  abstractviewshed.h  abstractviewshedalgorithm.h  cellevent.h  celleventposition.h  enums.h  event.h  inverselos.h  inverseviewshed.h  iviewshed.h  iviewshedalgorithm.h  los.h  losevaluator.h  losimportantvalues.h  losnode.h  memoryraster.h  points.h  position.h  rasterposition.h  statusnode.h  threadtasks.h  utils.h  viewshed.h  viewshedangledifferencetoglobalhorizon.h  viewshedangledifferencetolocalhorizon.h  viewshedelevationdifference.h  viewshedelevationdifferencetoglobalhorizon.h  viewshedelevationdifferencetolocalhorizon.h  viewshedhorizondistance.h  viewshedhorizons.h  viewshedvalues.h  viewshedviewangle.h  viewshedvisibility.h  visibility.h  visibilityalgorithms.h  visibilityangledifferencetoglobalhorizon.h  visibilityangledifferencetolocalhorizon.h  visibilityboolean.h  visibilityelevationdifference.h  visibilityelevationdifferencetoglobalhorizon.h  (+4 more)
include/viewshed/: abstractlos.h  abstractviewshed.h  abstractviewshedalgorithm.h  cellevent.h  celleventposition.h  constants.h  db.h  enums.h  inverselos.h  inverseviewshed.h  los.h  losevaluator.h  losimportantvalues.h  losnode.h  memoryraster.h  point.h  rasterposition.h  threadtasks.h  utils.h  viewshed.h  viewshed_export.h  viewshedtypes.h  viewshedutils.h  viewshedvalues.h  visibility.h  visibilityalgorithms.h  visibilityangledifferencetoglobalhorizon.h  visibilityangledifferencetolocalhorizon.h  visibilityboolean.h  visibilitydistanceglobalhorizon.h  visibilitydistancelocalhorizon.h  visibilityelevationdifference.h  visibilityelevationdifferencetoglobalhorizon.h  visibilityelevationdifferencetolocalhorizon.h  visibilityfuzzy.h  visibilityhorizondistance.h  visibilityhorizons.h  visibilityhorizonscount.h  visibilityslopetoviewangle.h  visibilityviewangle.h
scripts/: build_docker.sh  install.sh  release.sh  release_to_ppa.sh  test.sh  uninstall.sh
scripts/precommit/: clang_format.sh  conda_version.sh  pre-commit  version_update.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  (+21 more)
src/: CMakeLists.txt
src/los/: abstractlos.cpp  ilos.cpp  inverselos.cpp  los.cpp  losevaluator.cpp
src/memory_raster/: memoryraster.cpp
src/structures/: cellevent.cpp  celleventposition.cpp  event.cpp  losimportantvalues.cpp  losnode.cpp  point.cpp  points.cpp  position.cpp  rasterposition.cpp  statusnode.cpp
src/thread_tasks/: threadtasks.cpp
src/utils/: utils.cpp
src/visibility/: abstractviewshed.cpp  inverseviewshed.cpp  iviewshed.cpp  viewshed.cpp  visibility.cpp
src/visibility_algorithms/: boolean.cpp  elevationdifference.cpp  elevationdifferencetoglobalhorizon.cpp  horizondistance.cpp  losevaluator.cpp  viewangle.cpp  viewshedangledifferencetoglobalhorizon.cpp  viewshedangledifferencetolocalhorizon.cpp  viewshedelevationdifference.cpp  viewshedelevationdifferencetoglobalhorizon.cpp  viewshedelevationdifferencetolocalhorizon.cpp  viewshedhorizondistance.cpp  viewshedhorizons.cpp  viewshedviewangle.cpp  viewshedvisibility.cpp  visibilityangledifferencetoglobalhorizon.cpp  (+8 more)
tests/: CMakeLists.txt  testcellevent.cpp  testinverselosalgorithms.cpp  testinverseviewshed.cpp  testlos.cpp  testlosalgorithms.cpp  testmemoryraster.cpp  testsettings.in.h  testviewpoint.cpp  testviewshed.cpp  testviewshedtiming.cpp
tests/data/: dsm.tif  dsm_small.tif  hillshade.tif  visiblity_mask.tif
tests/gui/: testfileselectorwidget.cpp  testpointwidget.cpp  testviewshedcalculator.cpp
(+2 files in other folders)
